@@ -27,6 +27,7 @@ import java.sql.SQLException;
 import java.sql.Statement;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 
 import org.sqlite.SQLiteConfig;
@@ -34,6 +35,7 @@ import org.sqlite.SQLiteConfig;
 import org.apache.tika.extractor.EmbeddedDocumentUtil;
 import org.apache.tika.io.TikaInputStream;
 import org.apache.tika.metadata.Metadata;
+import org.apache.tika.metadata.Property;
 import org.apache.tika.mime.MediaType;
 import org.apache.tika.parser.ParseContext;
 import org.apache.tika.parser.jdbc.AbstractDBParser;
@@ -48,6 +50,12 @@ import org.apache.tika.parser.jdbc.JDBCTableReader;
 class SQLite3DBParser extends AbstractDBParser {
 
     protected static final String SQLITE_CLASS_NAME = "org.sqlite.JDBC";
+
+    protected static final Map<Property, String> METADATA_KEYS = Map.of(
+            SQLite3Parser.SQLITE_APPLICATION_ID, "select application_id from pragma_application_id",
+            SQLite3Parser.SQLITE_USER_VERSION, "select user_version from pragma_user_version"
+    );
+
     //If the InputStream wasn't a TikaInputStream, copy to this tmp file
     Path tmpFile = null;
 
@@ -143,5 +151,29 @@ class SQLite3DBParser extends AbstractDBParser {
     protected JDBCTableReader getTableReader(Connection connection, String tableName,
                                              EmbeddedDocumentUtil embeddedDocumentUtil) {
         return new SQLite3TableReader(connection, tableName, embeddedDocumentUtil);
+    }
+
+    @Override
+    protected void extractMetadata(Connection connection, Metadata metadata) {
+        //TODO -- figure out how to get the version of sqlite3 that last modified this file and
+        // version-valid-for.
+        // version-valid-for is at offset 92, last modified by app version isat offset 96 --
+        // not clear how to get this info via sql
+        //'file' extracts this info; we should to :\
+        //See: https://www.sqlite.org/fileformat.html
+        for (Map.Entry<Property, String> e : METADATA_KEYS.entrySet()) {
+            try (Statement st = connection.createStatement()) {
+                try (ResultSet rs = st.executeQuery(e.getValue())) {
+                    if (rs.next()) {
+                        int val = rs.getInt(1);
+                        if (! rs.wasNull()) {
+                            metadata.set(e.getKey(), Integer.toString(val, 16));
+                        }
+                    }
+                }
+            } catch (SQLException ex) {
+                //swallow
+            }
+        }
     }
 }
