@@ -32,6 +32,7 @@ import org.apache.tika.config.Param;
 import org.apache.tika.exception.TikaConfigException;
 import org.apache.tika.exception.TikaException;
 import org.apache.tika.metadata.Metadata;
+import org.apache.tika.metadata.Property;
 import org.apache.tika.mime.MediaType;
 import org.apache.tika.parser.ParseContext;
 import org.apache.tika.parser.Parser;
@@ -53,6 +54,20 @@ import org.apache.tika.parser.Parser;
  * that has to be created.
  */
 public class SQLite3Parser implements Parser, Initializable {
+
+    public static final String SQLITE3_PREFIX = "sqlite3:";
+
+    /**
+     * Base16 encoded integer representing the "application id"
+     */
+    public static final Property SQLITE_APPLICATION_ID =
+            Property.internalText(SQLITE3_PREFIX + "application_id");
+
+    /**
+     * Base16 encoded integer representing the "user version"
+     */
+    public static final Property SQLITE_USER_VERSION =
+            Property.internalText(SQLITE3_PREFIX + "user_version");
 
     /**
      * Serial version UID
